--- a/controllers/users/views/sendpass.html
+++ b/controllers/users/views/sendpass.html
@@ -115,7 +115,7 @@
          
         </div>
         <div class="pie">
-            <p>Puedes cambiar tu contraseña dentro de la misma app.</p>
+            <!--<p>Verifica que has  sido tú quien ha introducido este código de 6 digitos para iniciar sesión.</p>-->
         </div>
     </div>
 </body>
