--- a/controllers/users/views/sendpass.html
+++ b/controllers/users/views/sendpass.html
@@ -73,7 +73,7 @@
             transform: translate(-50%, -50%);
             text-align: center;
             font-family: Arial;
-            color: #FFFEFF;
+            color: #fe9136;
             margin-top: 17%;
            
         }
